[project]
name = "ComfyUI-Agnes-AI"
description = "ComfyUI custom nodes for the Agnes AI API — a free, cloud-based AI generation platform. Generate images, create videos, enhance prompts, and analyze visuals — all without a local GPU. Zero extra Python dependencies."
version = "1.0.0"
license = {file = "LICENSE"}

dependencies = []
    
[project.urls]
Repository = "https://github.com/1038lab/ComfyUI-Agnes-AI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ailab"
DisplayName = "ComfyUI-Agnes-AI"
Icon = ""
